# time-series-analysis

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docs/: ar_vs_gbrt.md
notebooks/: AirPassengers.ipynb
src/time_series_analysis/: __init__.py  time_series_analyzer.py
src/time_series_analysis/fourier/: __init__.py  fft.py  series.py
src/time_series_analysis/shared/interfaces/: __init__.py
src/time_series_analysis/utils/: __init__.py
tests/: test_time_series_analyzer.py
tests/fourier/: test_fft.py
tests/utils/: test_utils.py
