[project]
name = "time-series-analysis"
version = "0.0.1"
description = "Random ts stuff"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "altair>=5.5.0",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "pydantic>=2.11.6",
    "statsforecast>=2.0.1",
    "statsmodels>=0.14.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mypy>=1.16.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.11.13",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests", "src/time_series_analysis"]
addopts = [
    "--cov=src/time_series_analysis",
    "--cov-report=term-missing",
    "--doctest-modules"
]
